[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "combinexls"
version = "0.0.1"
authors = [
    {name = "Gao Feng", email = "gaofengms@outlook.com"},
]
description = "Scripts to combinexls multiple excel files."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["combinexls", "excel", "python"]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
]

[project.urls]
"Homepage" = "https://github.com/gaofengg/combinexls"